gotify/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gotify
  name: gotify-deployment
  namespace: gotify
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gotify
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: gotify
    spec:
      containers:
        - image: gotify/server:latest
          name: gotify
          volumeMounts:
            - name: config-volume
              mountPath: /etc/gotify
            - name: tls-cert
              mountPath: /etc/certs
      volumes:
        - name: config-volume
          configMap:
            name: gotify-config
        - name: tls-cert
          secret:
            secretName: gotify-cert
