gotify/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gotify-https
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt-issuer
spec:
  gatewayClassName: istio
  listeners:
    - name: https
      hostname: "smdsfagh.masterexecuson.com"
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - name: gotify-lets-encrypt-2
        mode: Terminate
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: v1
kind: Service
metadata:
  name: gotify-https
  labels:
    app: gotify-https
    service: gotify
spec:
  ports:
    - port: 80
      name: http
  selector:
    app: gotify
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gotify-route-https
spec:
  parentRefs:
    - name: gotify-https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: gotify
          port: 80
